* [BGBUILD-224] EBS Plugin Support for CentOS v5.5 and fix for non-integer EBS disk sizes
* [BGBUILD-231] Cannot register Fedora 15 EC2 AMI with S3 delivery plugin in eu-west-1 availability zone
* [BGBUILD-193] EBS delivery plugin timing/concurrency issues
* [BGBUILD-247] ap-northeast-1 end-point is missing in S3 plugin (add Tokyo region)

v0.9.2

* [BGBUILD-148] Add support for building CentOS/RHEL images on Fedora
* [BGBUILD-204] Fedora 15 appliance networking start on boot failed
* [BGBUILD-208] Kickstart files not working with 0.9.1
* [BGBUILD-205] Error while converting to EC2 when guest OS is CentOS/RHEL 5
* [BGBUILD-213] CloudSigma support
* [BGBUILD-209] Wrong /etc/mtab on Fedora 15 appliances causes errors
* [BGBUILD-203] Vmware vmdk disk size is wrong when installing via kickstart files
* [BGBUILD-207] Guestfs dies on Fedora 15 with 'KVM not supported for this target' message
* [BGBUILD-83] Enable libguestfs log callback to redirect guestfs output to logger

v0.9.1

* [BGBUILD-188] Use libuestfs instead mounting partitions manually for EC2 appliances
* [BGBUILD-97] some filesystems dont get unmounted on BG interruption
* [BGBUILD-155] Images built on Centos5.x (el5) for VirtualBox kernel panic (/dev/root missing)
* [BGBUILD-190] Allow to specify kernel variant (PAE or not) for Fedora OS
* [BGBUILD-196] GuestFS fails mounting partitions where more then 3 partitions are present
* [BGBUILD-200] /sbin/e2label: Filesystem has unsupported feature(s) while trying to open /dev/sda1
* [BGBUILD-194] Add support for ElasticHosts cloud
* [BGBUILD-202] Unable to get valid context for ec2-user after login on AMI

v0.9.0

* [BGBUILD-174] Move plugins to boxgrinder-build gem
* [BGBUILD-169] S3 plugin temporary work-around for EL5
* [BGBUILD-103] README to indicate supported operating systems / requirements
* [BGBUILD-175] Rewrite boxgrinder CLI to remove thor dependency
* [BGBUILD-81] post command execution w/ setarch breaks commands which are scripts