@@ -160,6 +160,7 @@ popd
 - [BGBUILD-231] Cannot register Fedora 15 EC2 AMI with S3 delivery plugin in eu-west-1 availability zone
 - [BGBUILD-193] EBS delivery plugin timing/concurrency issues
 - [BGBUILD-247] ap-northeast-1 end-point is missing in S3 plugin (added Toyko region)
+- [BGBUILD-248] Throw error in S3 plugin if invalid region is specified
 
 * Thu May 05 2011 Marek Goldmann <mgoldman@redhat.com> - 0.9.2-1
 - Upstream release: 0.9.2
